using helper_html_css

--- a/views/errorPage.html
+++ b/views/errorPage.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>ErrorPage</title>
 </head>
-<body>
-<h1><i>Page Not found!!!</i></h1>
+<body bgcolor="#F3340B">
+<h1>Page Not found!!!</h1>
+<h1>Please provide correct URL to access!!!</h1>
 </body>
 </html>
