--- a/views/add-product.html
+++ b/views/add-product.html
@@ -3,18 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>add-product</title>
+    <style type="text/css">
+        .heading {
+            background-color: yellow;
+            text-align: center;
+            border: 2px solid black;
+            margin: 0;
+            padding: 0;
+            color: black;
+
+        }
+
+        .demo {
+            list-style-type: none;
+        }
+
+        .demo li {
+            /*display: inline-block;*/
+            font-size: 20px;
+            padding: 20px;
+            color: black;
+        }
+
+        .body {
+
+           padding-top: 20px;
+        }
+    </style>
 </head>
 <body>
-<nav>
-    <ul>
-        <li>
-            Add product
-        </li>
-    </ul>
-</nav>
-<form action="/admin/product" method="post">
-    <input type="text" name="title=">
-    <button type="submit">Add product</button>
-</form>
+<div class="heading">
+    <nav>
+        <ul class="demo">
+            <li>
+                Add product
+            </li>
+        </ul>
+    </nav>
+</div>
+<div class="body">
+    <form action="/admin/product" method="post">
+        <input type="text" name="title=">
+        <button type="submit">Add product</button>
+    </form>
+</div>
 </body>
 </html>
