--- a/views/includes/menu.ejs
+++ b/views/includes/menu.ejs
@@ -2,7 +2,7 @@
 
 <% if (!!data.customer) { %>
     <% if (!!data.isAccount) { %>
-        <h3>Account</h3>
+        <h3>Account-user</h3>
         <div class="vertical-menu">
 
             <!--<a href="/upload/<%= data.customer._id %>" class="active">Single Media</a>-->
