--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -1,21 +1,19 @@
-
-
 h1{
 
-    color: #770080;
-    font-family:Courier New
+    color:royalblue;
+    font-family:'Times New Roman', Times, serif
 }
 
 h2{
 
     color: red;
-    font-family:Courier New
+    font-family:'Times New Roman', Times, serif
 }
 b{
 
 
-    color: #770080;
-    font-family:Courier New
+    color: royalblue;
+    font-family:'Times New Roman', Times, serif
 
 }
 .center {
