--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -1,7 +1,7 @@
-<div class="d-flex bd-highlight bg-dark ">
+<div class="d-flex bd-highlight bg-dark">
     <div class="p-2 flex-grow-1 bd-highlight"><a href="#" class="nav-link text-white font-weight-bolder">Pixogram</a></div>
 
-    <div class="p-2 bd-highlight"><a href="/" class="nav-link text-white">Home</a></div>
+    <div class="p-2 bd-highlight"><a href="/users/home" class="nav-link text-white">Home</a></div>
 
     <% if (data.isAuthenticated) { %>
         <div class="p-2 bd-highlight"><a href="/account/update" class="nav-link text-white">Account</a></div>
