--- a/views/multiplemedia.ejs
+++ b/views/multiplemedia.ejs
@@ -13,7 +13,7 @@
     </div>
 
     <div class="col-md-6">
-        <h1>Multiple Media Page</h1>
+        <h1><small> Upload Multiple Images here!!!</small></h1>
 
 
 
