--- a/views/singlemedia.ejs
+++ b/views/singlemedia.ejs
@@ -14,7 +14,7 @@
 
     <div class="col-md-6">
 
-        <h1>New Media Page</h1>
+        <h1><small>Upload Media file here!!!</small></h1>
         <form id="form1" name="form1" method="POST" action="/media/add-media" enctype="multipart/form-data">
             <div>
                 <table class="center">
