--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@
 
 .vertical-menu a {
   background-color: #eee;
-  color: black;
+  color:green;
   display: block;
   padding: 12px;
   text-decoration: none;
