--- a/views/search.ejs
+++ b/views/search.ejs
@@ -14,11 +14,7 @@
     <div class="col-md-6">
 
 
-        <h1>Search Page</h1>
-
-
-
-
+        <h1><i><small>Please do search here!!!</small></i></h1>
 		<% if (!!data.customer) { %>
 		    <% if (!!data.users) { %>
 		        <% data.users.forEach(function(cust) { %>
@@ -26,8 +22,7 @@
 		        <img src="data:image/<%=cust.profilepic.contentType%>;base64,
 		                     <%=cust.profilepic.imgdata.toString('base64')%>" width="300" height="250">
 		        <div>
-		            <p><%= cust.firstname %></p>
-		            <p><%= cust.lastname %></p>
+		            <p><%= cust.firstname %> <%= cust.lastname %><p>
 
 
 		            <button onClick="addFollowers('<%= data.customer._id %>','<%= cust._id %>')" >Follow </button>
